# aicommit

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/scripts/: update-winget.ps1
.github/workflows/: ci.yml  update-tap.yml  update-winget.yml
docs/: README.md  architecture.md  configuration.md  hooks.md  installation.md  map.md  providers.md  roadmap.md  testing.md  usage.md
docs/releases/: 0.0.1.md  0.0.2.md  0.0.3.md  0.0.4.md  0.0.5.md  0.0.6.md  0.0.7.md  0.0.8.md  unreleased.md
prompts/: commit-system.md  git-guidance-system.md  pr-system.md  review-system.md  split-system.md
src/: cli.rs  cli_help.toml  cli_text.rs  config.rs  errors.rs  generator.rs  git.rs  git_hosts.toml  history.rs  lib.rs  prompt.rs  token.rs  ui.rs
src/ai/: anthropic.rs  command.rs  mod.rs  ollama.rs  openai_compat.rs
src/ai/command/: execution.rs  mod.rs  path.rs
src/commands/: commit.rs  completions.rs  config.rs  history.rs  hook.rs  log.rs  mod.rs  models.rs  pr.rs  review.rs  setup.rs
src/config/: load.rs  mod.rs  model.rs  parse.rs  validate.rs  write.rs
src/generator/: commit.rs  git_guidance.rs  mod.rs  pull_request.rs  split_plan.rs
src/git/: branch.rs  exec.rs  history.rs  hooks.rs  mod.rs  remote.rs  repo.rs  stats.rs  sync.rs
src/history_store/: mod.rs
src/map/: activity.rs  config.rs  heatmap.rs  mod.rs  palette.rs  svg_util.rs  theme.rs  timeline.rs  treemap.rs
src/prompt/: commit.rs  git_guidance.rs  mod.rs  pr.rs  review.rs  sanitize.rs  split.rs
tests/: cli.rs  provider.rs
themes/: classic-dark.toml  classic-light.toml  default-dark.toml  default-light.toml  dracula.toml  github-dark.toml  github-light.toml  monokai.toml  solarized-dark.toml  solarized-light.toml
(+27 files in other folders)
