[package]
name = "aicommit"
version = "0.0.2"
edition = "2024"
description = "Generate AI-assisted Git commit messages"
license = "MIT"

[[bin]]
name = "aic"
path = "src/bin/aic.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
console = "0.16"
directories = "6.0"
ignore = "0.4"
indicatif = "0.18"
inquire = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tiktoken-rs = "0.7"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "fs"] }
toml_edit = { version = "0.23", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.23"
wiremock = "0.6"
